--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
    <div class="container">
     <div class="form-box login">
       <form action="">
-        <h1>login</h1>
+        <h1>Login</h1>
         <div class="input-box">
           <input type="text" placeholder="Username" required>
+          <i class="fa-solid fa-user"></i>
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Password" required>
+          <input type="Password" placeholder="Password" required>
+          <i class="fa-solid fa-lock"></i>
+        </div>
+        <div class="forgot-link">
+          <a href="#">Forgot password?</a>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <p>or login with socials platform</p>
+        <div class="social-icons">
+          <a href="#"><i class="fa-brands fa-google"></i></a>
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </form>
     </div>
