--- a/index.html
+++ b/index.html
@@ -33,6 +33,40 @@
         </div>
       </form>
     </div>
+
+    <!-- **************************register********************** -->
+     <div class="form-box register">
+      <form action="">
+        <h1>Register</h1>
+        <div class="input-box">
+          <input type="text" placeholder="Name" required>
+          <i class="fa-solid fa-user"></i>
+        </div>
+        <div class="input-box">
+          <input type="mail" placeholder="Email" required>
+          <i class="fa-solid fa-envelope"></i>
+        </div>
+        <div class="input-box">
+          <input type="Password" placeholder="Password" required>
+          <i class="fa-solid fa-lock"></i>
+        </div>
+        <button type="submit" class="btn">Register</button>
+        <p>or register with socials platform</p>
+        <div class="social-icons">
+          <a href="#"><i class="fa-brands fa-google"></i></a>
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </form>
+    </div>
+    <div class="toggle-box">
+      <div class="toggle-panel toggle-left">
+        <h1>Hello, Welcome</h1>
+        <p>Don't have an account?</p>
+        <button class="btn register-btn">Register</button>
+      </div>
+    </div>
    </div>
 </body>
 </html>
