--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="container">
+   <div class="container active">
     <div class="form-box login">
       <form action="">
         <h1>Login</h1>
@@ -62,11 +62,18 @@
     </div>
     <div class="toggle-box">
       <div class="toggle-panel toggle-left">
-        <h1>Hello, Welcome</h1>
+        <h1>Hello, Welcome!</h1>
         <p>Don't have an account?</p>
         <button class="btn register-btn">Register</button>
       </div>
+      <div class="toggle-panel toggle-right">
+        <h1>Welcome, Back!</h1>
+        <p>Already have an account?</p>
+        <button class="btn login-btn">Login</button>
+      </div>
     </div>
    </div>
+
+   <script src="script.js"></script>
 </body>
 </html>
